--- a/figs/incbi-sq/herbbookshelf0.tex
+++ b/figs/incbi-sq/herbbookshelf0.tex
@@ -8,12 +8,12 @@
       xmin=0, xmax=1,
       %ymin=0, ymax=10.5,
       ymin=0,
-      %width=3.6cm,
-      %height=3.6cm,
+      width=8cm,
+      height=8cm,
       xlabel=IBiD balancer goal bias,
       ylabel=cumulative search time (sec),
-      %xlabel near ticks,
-      %ylabel near ticks,
+      xlabel near ticks,
+      ylabel near ticks,
       %xmin=0, xmax=1,
       %ymin=0, ymax=15,
       %xticklabels={,0,,,,,1},
@@ -21,6 +21,13 @@
       %xmajorgrids,
       %y label style={at={(axis description cs:-0.18,0.5)},anchor=south},
       %x label style={at={(axis description cs:0.5,0.0)},anchor=north}
+      y tick label style={
+         /pgf/number format/.cd,
+            fixed,
+            fixed zerofill,
+            precision=2,
+         /tikz/.cd
+      },
       ]
    
    \addplot
