add new incbi-road-ne results

--- a/figs/incbi-sq/all-even.tex
+++ b/figs/incbi-sq/all-even.tex
@@ -31,6 +31,7 @@
       table[x=problem,y=planner-dur-search-finmean]
       {data/incbi-sq/stats-byprob-wincbi-lambda\lambdaval -even-gf0.01-hi1.00.txt};
 
+   % incbi
    \addplot+[draw=black,fill=black!20]
       table[x=problem,y=planner-dur-search-finmean]
       {data/incbi-sq/stats-byprob-wincbi-lambda\lambdaval -even-gf0.50-hi0.50.txt};
