add goldberg reference

--- a/references.bib
+++ b/references.bib
@@ -623,6 +623,26 @@
    url = {http://research.microsoft.com/apps/pubs/default.aspx?id=64510},
 }
 
+@inbook{goldberg2007pointtopoint,
+   author = {Goldberg, Andrew V.},
+   chapter = {Point-to-Point Shortest Path Algorithms with
+      Preprocessing},
+   editor = {van Leeuwen, Jan and Italiano, Giuseppe F.
+      and van der Hoek, Wiebe and Meinel, Christoph and Sack, Harald
+      and Pl{\'a}{\v{s}}il, Franti{\v{s}}ek},
+   title = {SOFSEM 2007: Theory and Practice of Computer Science:
+      33rd Conference on Current Trends in Theory and Practice of
+      Computer Science, Harrachov, Czech Republic,
+      January 20-26, 2007. Proceedings},
+   year = {2007},
+   publisher = {Springer},
+   address = {Berlin, Heidelberg},
+   pages = {88--102},
+   isbn = {978-3-540-69507-3},
+   doi = {10.1007/978-3-540-69507-3_6},
+   url = {http://dx.doi.org/10.1007/978-3-540-69507-3_6},
+}
+
 === Manual ===
 @inproceedings{goldenberg2013epeastar,
    author = {Meir Goldenberg and Ariel Felner and Nathan Sturtevant and
