--- a/thesis-ch04-ibid.tex
+++ b/thesis-ch04-ibid.tex
@@ -196,6 +196,8 @@ including bidirectional variants as proposed by
 Kaindl and Kainz, ``Bidirectional Heuristic Search Reconsidered,''
 Journal of AI Research 1997.
 
+Also see recent survey, \citep{goldberg2007pointtopoint}.
+
 \subsection{Heuristic Search}
 
 Heuristic methods such as the Graph Traverser
