--- a/thesis-ch03-lazysp.tex
+++ b/thesis-ch03-lazysp.tex
@@ -4,6 +4,9 @@
 {\bf Selectors.
 Edge-equivalence.}
 
+\cdnote{Important caveat: due to roadmap edges sharing vertices,
+edges adjacent to evaluated edges will also change cost!}
+
 While the shortest path problem has myriad applications,
 the computational efficiency of suitable algorithms
 depends intimately on the underlying problem domain.
