add initial chimp-master plot

--- a/thesis-ch05-lemur.tex
+++ b/thesis-ch05-lemur.tex
@@ -1098,6 +1098,13 @@ Chapter~\ref{chap:family}.
    \label{fig:filmstrip}
 \end{figure*}
 
+\begin{figure*}
+   \centering   
+   \includegraphics{build/lemur-sq/chimp-master}
+   \caption[]{Experimental results across CHIMP motion planning
+      instances for a 7-DOF robot arm.}
+\end{figure*}
+
 \section{Experiments}
 \label{sec:experiments}
 
